--- a/src/styles/components/GoogleMapComponent.css
+++ b/src/styles/components/GoogleMapComponent.css
@@ -10,6 +10,13 @@
     border-radius: 8px;
   }
   
+.google-map-loading {
+  display: flex;
+  justify-content: center; /* 수평정렬 */
+  align-items: center; /* 수직정렬 */
+  height: 100%; /* 부모 요소의 높이를 100%로 설정하여 상하 중앙 정렬 */
+}
+
   .google-map-canvas {
     width: 100%;
     height: 100%;
