--- a/src/styles/components/ClinicList.css
+++ b/src/styles/components/ClinicList.css
@@ -18,12 +18,12 @@
 }
 
 .hospital-list::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #EEF0FD;
   border-radius: 10px;
 }
 
 .hospital-list::-webkit-scrollbar-thumb {
-  background: #ccc;
+  background: #C2D4F6;
   border-radius: 10px;
 }
 
