--- a/src/styles/components/ClinicList.css
+++ b/src/styles/components/ClinicList.css
@@ -131,10 +131,10 @@
     width: 100%;
     border-right: none;
     border-bottom: 1px solid #eaeaea;
-    height: auto;
-    max-height: 300px;
+    height: 33.33vh;
     position: relative;
     top: 0;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 3px 10px 5px rgba(0, 0, 0, 0.05);
   }
 }
 
