--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -4,6 +4,12 @@
     align-items: center;
     padding: 1rem 2rem;
     border-bottom: 1px solid #eaeaea;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
   }
   
   .logo-container {
@@ -13,6 +19,7 @@
   
   .logo {
     height: 35px;
+    cursor: pointer;
   }
   
   .web-preview {
@@ -55,20 +62,24 @@
   
   @media (max-width: 768px) {
     .header {
-      flex-direction: column;
-      padding: 1rem;
+      padding: 0.5rem 1rem;
+      height: 50px;
+      justify-content: center;
     }
     
     .logo-container {
-      margin-bottom: 1rem;
+      margin: 0;
+    }
+    
+    .logo {
+      height: 25px;
+    }
+    
+    .web-preview {
+      display: none;
     }
     
     .navigation {
-      width: 100%;
-      justify-content: space-between;
-    }
-    
-    .nav-link {
-      margin-right: 1rem;
+      display: none;
     }
   }
