--- a/src/styles/components/ClinicList.css
+++ b/src/styles/components/ClinicList.css
@@ -136,6 +136,24 @@
     top: 0;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 3px 10px 5px rgba(0, 0, 0, 0.05);
   }
+
+  .hospital-list::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .hospital-list::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 10px;
+  }
+
+  .hospital-list::-webkit-scrollbar-thumb {
+    background: #C2D4F6;
+    border-radius: 10px;
+  }
+
+  .hospital-list::-webkit-scrollbar-thumb:hover {
+    background: #C2D4F6;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1200px) {
